[package]
name = "pallet-parachain-verifier"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-support-procedural.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true

# zk lib
bellman-verifier = { path = "../../bellman-verifier", default-features = false }
ff = { workspace = true, default-features = false }
pairing = { workspace = true, default-features = false }
bls12_381 = { workspace = true, features = ["groups"] }
log = { workspace = true }
sp-std = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
	"codec/std",
	"scale-info/std",

	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",

	"sp-runtime/std",

	"bellman-verifier/std",
]
try-runtime = ["frame-support/try-runtime"]
